[gd_scene load_steps=2 format=3 uid="uid://levelview"]

[ext_resource type="Script" path="res://Scripts/LevelView.gd" id="1"]

[node name="LevelView" type="PanelContainer"]
custom_minimum_size = Vector2(200, 180)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 0)

[node name="LevelLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Level"
theme_override_font_sizes/font_size = 20

[node name="TaglineLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Tagline"
modulate = Color(0.7, 0.9, 1, 1)

[node name="CompletionBar" type="ProgressBar" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
show_percentage = true

[node name="SkillsLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Skills: --"
modulate = Color(0.8, 0.85, 1, 1)

[node name="CompletionLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "0% complete"

[node name="OpenButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Enter"
*** End File